feat: Refactor core engine, add tests, and setup CI
This major update refactors the core rendering engine, introduces a full test suite, and sets up automated testing.

- **Refactor**: The `HtmlTag` class is now decoupled from the `DOMElement` state. It uses internal, state-driven properties (`$tagName`, `$attributes`, `$values`), which simplifies logic and makes rendering more predictable.

- **Test**: A comprehensive PHPUnit test suite has been added, providing coverage for all Node types (`HtmlTag`, `HtmlText`, `EscapedText`, `HtmlTagMulti`) and the `HtmlClass` utility. This ensures code stability and prevents future regressions.

- **CI**: A new GitHub Actions workflow (`tests.yml`) has been set up to automatically run the test suite on every push and pull request, ensuring code quality is maintained.

- **Docs**: Improved PHPDoc blocks across the source code for better readability and maintainability.

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         {
             "name" : "AmirHossein Jafari",
             "email": "amirhosseinjafari8228@gmail.com"
+        },{
+             "name" : "Seyed Mohammad Javad Mousavi",
+            "email": "mou17savi@gmail.com"
         }
     ],
     "autoload": {
@@ -22,7 +25,8 @@
         "ext-dom"  : "*"
     },
     "require-dev": {
-        "amphp/php-cs-fixer-config": "^2"
+        "amphp/php-cs-fixer-config": "^2",
+        "phpunit/phpunit": "^12.2"
     },
     "scripts": {
         "build": [
