refactor: Complete project overhaul for quality and robustness
This major update refactors the entire PhpTagMaker library to improve code quality, enhance developer tooling, and increase overall robustness and reliability.

CODE QUALITY & ROBUSTNESS:

    Implemented stricter typing across the entire codebase using list and specific array shapes, making the code more predictable and easier to analyze.

    Resolved all issues identified by PHPStan at level 8, fixing potential bugs and type mismatches.

    Added logic to prevent adding children to HTML void elements (e.g., <img>, <br>), throwing a LogicException to enforce correct usage.

    Fully commented all classes and methods in English to improve readability and maintainability.

DEVELOPMENT & TESTING:

    Enhanced composer.json with dedicated scripts for testing (test), coverage (test:coverage), static analysis (analyse), and code style (cs, cs-fix).

    Updated the testing suite to be more reliable. Key tests now inspect the generated DOM structure directly instead of comparing brittle HTML strings, resolving XML parsing errors.

    Configured PHP-CS-Fixer to run on newer PHP versions (8.4+).

    Updated the GitHub Actions workflow (tests.yml) to run jobs on a matrix of PHP versions (8.0-8.3) and to include static analysis and code style checks.

DOCUMENTATION & CONFIGURATION:

    Created a comprehensive README.md file with detailed installation instructions, API documentation, security guidelines, and a contribution guide.

    Added a LICENSE file (GPL-3.0-only) to the project root.

    Improved the .gitignore file to cover more common files and directories.

--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
-    "name"       : "ahjdev/phptagmaker",
+    "name": "ahjdev/phptagmaker",
     "description": "Create html tags by php",
-    "license"    : "GPL-3.0-only",
-    "keywords"   : [
+    "license": "GPL-3.0-only",
+    "keywords": [
         "php",
         "html",
-        "tag"
+        "tag",
+        "builder"
     ],
     "authors": [
         {
-            "name" : "AmirHossein Jafari",
+            "name": "AmirHossein Jafari",
             "email": "amirhosseinjafari8228@gmail.com"
-        },{
-             "name" : "Seyed Mohammad Javad Mousavi",
+        },
+        {
+            "name": "Seyed Mohammad Javad Mousavi",
             "email": "mou17savi@gmail.com"
         }
     ],
@@ -22,17 +24,19 @@
         }
     },
     "require": {
-        "ext-dom"  : "*"
+        "php": "^8.0",
+        "ext-dom": "*"
     },
     "require-dev": {
         "amphp/php-cs-fixer-config": "^2",
-        "phpunit/phpunit": "^12.2"
+        "phpunit/phpunit": "^10.0 || ^11.0",
+        "phpstan/phpstan": "^1.10"
     },
     "scripts": {
-        "build": [
-            "@cs-fix"
-        ],
-        "cs"    : "php -d pcre.jit=0 vendor/bin/php-cs-fixer fix -v --diff --dry-run",
-        "cs-fix": "php -d pcre.jit=0 vendor/bin/php-cs-fixer fix -v --diff"
+        "test": "./vendor/bin/phpunit",
+        "test:coverage": "./vendor/bin/phpunit --coverage-html coverage",
+        "cs": "php -d pcre.jit=0 vendor/bin/php-cs-fixer fix -v --diff --dry-run",
+        "cs-fix": "php -d pcre.jit=0 vendor/bin/php-cs-fixer fix -v --diff",
+        "analyse": "./vendor/bin/phpstan analyse src tests --level=8"
     }
 }
