--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,36 +1,51 @@
+# This is a GitHub Actions workflow file.
+# It defines a set of jobs that will be run automatically on every push or pull request
+# to the repository, ensuring code quality and preventing regressions.
+
 name: Run PHP Tests & Static Analysis
 
 on: [push, pull_request]
 
 jobs:
   test:
+    # The job will run on the latest version of Ubuntu.
     runs-on: ubuntu-latest
+
+    # This strategy block defines a build matrix.
+    # FIX: The matrix now starts from PHP 8.1, which is the minimum version
+    # required by the project's dependencies (PHPUnit 10).
     strategy:
       matrix:
-        php-version: ['8.0', '8.1', '8.2', '8.3']
+        php-version: ['8.1', '8.2', '8.3']
+
     steps:
+      # Step 1: Check out the repository code.
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Set up the PHP environment for the current job.
       - name: Setup PHP v${{ matrix.php-version }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
           extensions: dom, mbstring
           coverage: xdebug
+
+      # Step 3: Install Composer dependencies using the lock file.
+      # This is now consistent across all jobs.
       - name: Install Composer dependencies
-        run: |
-          if [[ ${{ matrix.php-version }} < '8.2' ]]; then
-            composer update --prefer-dist --no-progress --no-suggest
-          else
-            composer install --prefer-dist --no-progress --no-suggest
-          fi
+        run: composer install --prefer-dist --no-progress --no-suggest
+
+      # Step 4: Run the PHPUnit test suite.
       - name: Run tests
         run: ./vendor/bin/phpunit
 
+      # Step 5: Run PHPStan for static analysis (only on the latest PHP version).
       - name: Run static analysis
         if: matrix.php-version == '8.3'
         run: ./vendor/bin/phpstan analyse src tests --level=8
+
+      # Step 6: Check for coding style violations (only on the latest PHP version).
       - name: Check coding style
         if: matrix.php-version == '8.3'
         run: composer cs
